# easebox-v1

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
easebox/: manage.py
easebox/abstract/services/email/: email_local.py
easebox/abstract/tests/: test_helper.py
easebox/accounts/: admin.py  backends.py  enums.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  twilio_sms.py  urls.py  views.py  viewsets.py
easebox/accounts/handlers/: abstract.py  passwords.py  users.py  verification.py
easebox/accounts/migrations/: 0001_initial.py  0002_remove_fleet_fleet_pricing_and_more.py  0003_remove_fleet_efficiency.py  0004_alter_user_email.py  0005_user_phone_number_verification_key.py  0006_remove_user_phone_number_verification_key.py  0007_user_phone_number_verification_key.py  0008_alter_user_phone_number_verification_key.py  0009_remove_user_is_verified_user_email_verification_key_and_more.py  0010_remove_business_description_remove_business_image.py  0011_rename_accept_terms_user_accept_terms_and_privacy_and_more.py  0012_alter_business_city.py  0013_alter_business_city.py  0014_user_password_reset_key_and_more.py  0015_user_active_password_reset_link.py  0016_user_password_reset_otp.py
easebox/accounts/templates/accounts/: email-verified.html  reset-password.html  verify-email.html
easebox/accounts/tests/: account_factory.py  fixtures.py  test_helpers.py  test_models.py  test_user_api.py
easebox/accounts/validation/: models.py  validators.py
easebox/easebox/: asgi.py  celery.py  drf_spectacular_urls.py  settings.py  urls.py  wsgi.py
(+6 files in other folders)
