[tool.poetry]
name = "easebox-demo"
version = "0.1.0"
description = ""
authors = ["abdul <abdoolihima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
