[tool.poetry]
name = "easebox-app"
version = "1.7.1"
description = ""
authors = ["abdul <abdoolihima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
djangorestframework-simplejwt = "^5.3.0"
python-decouple = "^3.8"
twilio = "^8.10.2"
pyotp = "^2.9.0"
pendulum = "^2.1.2"
six = "^1.16.0"
celery = "^5.3.6"
redis = "^5.0.1"
pydantic = {extras = ["email"], version = "^2.5.3"}


[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
